--- a/src/css/style.css
+++ b/src/css/style.css
@@ -445,7 +445,7 @@ body {
 .about-text-sub {
   font-size: 1.2rem;
   line-height: 1.8;
-  color: rgba(255, 255, 255, 0.8);
+  color: #ffffff;
 }
 
 /* ===============================
